@@ -5,26 +5,22 @@ package edu.wpi.cs.wpisuitetcw.modules.planningpoker.view.overviews;
 
 import java.awt.BorderLayout;
 import java.awt.Color;
-import java.awt.Component;
-import java.awt.Dimension;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
 import java.awt.GridLayout;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 
-import javax.swing.Box;
-import javax.swing.BoxLayout;
 import javax.swing.JButton;
-import javax.swing.JLabel;
-import javax.swing.JList;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
 import javax.swing.JSplitPane;
 import javax.swing.JTable;
-import javax.swing.ScrollPaneConstants;
+import javax.swing.border.EmptyBorder;
 import javax.swing.event.ListSelectionEvent;
-import javax.swing.event.ListSelectionListener;
+
+import edu.wpi.cs.wpisuitetcw.modules.planningpoker.models.PlanningPokerSession;
+import edu.wpi.cs.wpisuitetcw.modules.planningpoker.view.ViewEventController;
 
 
 /**
@@ -32,8 +28,7 @@ import javax.swing.event.ListSelectionListener;
  * 
  */
 public class OverviewPanel extends JSplitPane {
-	/**
-	 * 4	 */
+
 	private static final long serialVersionUID = 1L;
 	private final JPanel rightPanel;
 	private final JPanel leftPanel;
@@ -47,6 +42,9 @@ public class OverviewPanel extends JSplitPane {
 		
 		// Create the left side
 		leftPanel = new JPanel();
+
+		// adds some padding
+		leftPanel.setBorder(new EmptyBorder(10, 10, 10, 10));
 		
 		// Set leftPanel to GridLayout
 		leftPanel.setLayout(new GridLayout( 6, 1, 1, 20 ) );
@@ -56,10 +54,38 @@ public class OverviewPanel extends JSplitPane {
 		closedSessionBtn = new JButton("Closed Sessions");
 		allSessionsBtn = new JButton("All Sessions");
 		
+		// Listener for Open Sessions Button
+		openSessionBtn.addActionListener(new ActionListener() {
+			@Override
+			public void actionPerformed(ActionEvent e) {
+				// TO_DO: Get real data
+				System.out.println("YOU CLICKED ME!");
+			}
+		});
+		
+		// Listener for Closed Sessions Button
+		closedSessionBtn.addActionListener(new ActionListener() {
+			@Override
+			public void actionPerformed(ActionEvent e) {
+				// TO_DO: Get real data
+				System.out.println("YOU CLICKED ME!");
+			}
+		});
+		
+		// Listener for All Sessions Button
+		allSessionsBtn.addActionListener(new ActionListener() {
+			@Override
+			public void actionPerformed(ActionEvent e) {
+				// TO_DO: Get real data
+				System.out.println("YOU CLICKED ME!");
+			}
+		});
+		
 		// Add the buttons to the leftPanel
 		leftPanel.add( openSessionBtn );
 		leftPanel.add( closedSessionBtn );
 		leftPanel.add( allSessionsBtn );
+	
 		
 		
 		// Dummy Data for now, eventually this will be generated from BD
@@ -68,152 +94,149 @@ public class OverviewPanel extends JSplitPane {
 		
 		Object[][] tableData = {
 				{
-					new Integer(0), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(0), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(1), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(1), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(2), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(2), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(3), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(3), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(4), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(4), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(5), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(5), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(6), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(6), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(7), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(7), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(8), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(8), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(9), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(9), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(10), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(10), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(11), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(11), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(12), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(12), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(13), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(13), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(14), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(14), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(15), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(15), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(16), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(16), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(17), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(17), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(18), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(18), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(19), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(19), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(20), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(20), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(21), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(21), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(22), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(22), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(23), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(23), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(24), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(24), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(25), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(25), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(26), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(26), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(27), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(27), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(28), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(28), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(29), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(29), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(30), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(30), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(31), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(31), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(32), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(32), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(33), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(33), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(34), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
+					Integer.valueOf(34), "This is a name", "1/11/1111", "WEEEE a description", "In Progress"
 				},
 				{
-					new Integer(35), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(35), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(36), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(36), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(37), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(37), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(38), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(38), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(39), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(39), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(40), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(40), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(41), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(41), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(42), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(42), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(43), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(43), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(44), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(44), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(45), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(45), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(46), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(46), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				},
 				{
-					new Integer(47), "This is another name", "2/22/2222", "numbah two", "In Progress"
+					Integer.valueOf(47), "This is another name", "2/22/2222", "numbah two", "In Progress"
 				}
-				
-				
-				
 		};
 		
 		// Create Table using data above
@@ -225,11 +248,8 @@ public class OverviewPanel extends JSplitPane {
 	        public boolean isCellEditable(int row, int column) {                
 	                return false;               
 	        };
-	        
-	        public void valueChanged(ListSelectionEvent e) {
-				
-			}
 	    };
+	     
 	    
 	    // Add mouse listener to check for mouse clicks on the table
 	    table.addMouseListener(new MouseAdapter() {
@@ -243,10 +263,8 @@ public class OverviewPanel extends JSplitPane {
 	    	});
 	    
 	    
-		
 		// Sets table bg to white
 		table.setBackground(Color.WHITE);
-		
 
 		
 		// Set layout for right panel
@@ -283,6 +301,11 @@ public class OverviewPanel extends JSplitPane {
 
 	public JButton getAllSessionsBtn() {
 		return allSessionsBtn;
+	}
+	
+	
+	public void recieveSessionList(PlanningPokerSession[] pps) {
+		
 	}
 	
 }
